# dietmcp

./: .env.example  .gitignore  BENCHMARK_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SKILL.md  TWITTER_THREAD.md  _meta.json  pyproject.toml
.github/workflows/: ci.yml
benchmark/: Dockerfile  run_benchmark.py
benchmark_results/: FINAL_COMPARISON.md  SUMMARY.md  benchmark_results.md
benchmarks/: token_comparison.py
docs/: graphql_introspection.md  migration-guide.md  multi-protocol-guide.md  openapi_generator.md  openapi_test_summary.md  operation_id_strategies.md  ref_resolver_implementation.md  ultra-compact-format.md
examples/: github_graphql.py  graphql_introspection.py  multi_protocol_config.json  openapi_integration.py  openapi_petstore.py  operation_id_strategies.py  toon_demo.py
openclaw/: SKILL.md  _meta.json
scripts/: benchmark_all_protocols.py  benchmark_vs_mcp2cli.py
src/dietmcp/: __init__.py  main.py
tests/: conftest.py  test_openapi_generator.py
tests/fixtures/: sample_config.json  sample_mcp_response.json  sample_tool_schemas.json
tests/integration/: README_MULTI_PROTOCOL_TESTS.md  test_cli.py  test_multi_protocol.py
tests/unit/: test_cache_cmd.py  test_config_loader.py  test_connection.py  test_credentials.py  test_discovery.py  test_executor.py  test_formatters.py  test_graphql_executor.py  test_graphql_generator.py  test_graphql_introspection.py  test_masking.py  test_models.py  test_openapi_executor.py  test_openapi_generator.py  test_openapi_parser.py  test_rate_limiter.py  test_ref_resolver.py  test_skills_generator.py  (+3 more)
(+46 files in other folders)
