[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dietmcp"
version = "0.1.0"
description = "MCP-to-CLI bridge that reduces context window bloat for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
]

[project.scripts]
dietmcp = "dietmcp.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dietmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]
